--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@apollo/client": "^3.12.8",
     "@apollo/server": "^4.11.3",
     "@as-integrations/next": "^3.2.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "6.3.0",
     "graphql": "^16.10.0",
     "next": "15.1.6",
+    "next-auth": "5.0.0-beta.25",
     "preline": "^2.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
